2015-12-22  Carl Hetherington  <cth@carlh.net>

	* Fix hang when removing screens in some cases.

2015-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.8 released.

2015-12-21  c.hetherington  <cth@carlh.net>

	* Reduce frequency of temporary writes to disk (#748).

	* Use new Dolby website for both Doremi and Dolby certificates (#775).

2015-12-18  c.hetherington  <cth@carlh.net>

	* Fix double-calculation of DCP hashes.

	* Add hint about making non-24/48 FPS Interop DCPs.

2015-12-15  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Niuewkerk.

2015-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.7 released.

2015-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.6 released.

2015-12-06  Carl Hetherington  <cth@carlh.net>

	* Add menu option to send a project to the
	batch converter (#770).

2015-12-10  Carl Hetherington  <cth@carlh.net>

	* Put ISDCF name subtitle language in lower case if all subs are
	burnt into the image.

2015-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.5 released.

2015-12-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.4 released.

2015-11-30  Carl Hetherington  <cth@carlh.net>

	* Port to OpenJPEG version 2.1.

2015-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.3 released.

2015-12-04  Carl Hetherington  <cth@carlh.net>

	* Fix non-functional send-problem-report.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.2 released.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on startup of server GUI in some cases.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.1 released.

2015-12-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on uploading to TMS via FTP.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.6.0 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.15 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>
