@@ -39,7 +39,7 @@ ScreensPanel::ScreensPanel (wxWindow* parent)
 
 	wxBoxSizer* targets = new wxBoxSizer (wxHORIZONTAL);
 	_targets = new wxTreeCtrl (this, wxID_ANY, wxDefaultPosition, wxDefaultSize, wxTR_HIDE_ROOT | wxTR_MULTIPLE | wxTR_HAS_BUTTONS | wxTR_LINES_AT_ROOT);
-	targets->Add (_targets, 1, wxEXPAND | wxTOP | wxRIGHT, DCPOMATIC_SIZER_GAP);
+	targets->Add (_targets, 1, wxEXPAND | wxRIGHT, DCPOMATIC_SIZER_GAP);
 
 	_root = _targets->AddRoot ("Foo");
 
