@@ -1,3 +1,7 @@
+2015-12-23  Carl Hetherington  <cth@carlh.net>
+
+	* Add stored list of DKDMs to KDM creator (#767).
+
 2015-12-22  Carl Hetherington  <cth@carlh.net>
 
 	* Fix hang when removing screens in some cases.
